<resources>
    <string name="app_name">Mathemaniacs</string>
    <string name="basicMultiHighScore">BasicMultiHighScore</string>
    <string name="advancedMultiHighScore">AdvancedMultiHighScore</string>
    <string name="expertMultiHighScore">ExpertMultiHighScore</string>
    <string name="squaresHighScore">SquaresHighScore</string>
    <string name="moduloHighScore">ModuloHighScore</string>
    <string name="factorialHighScore">FactorialHighScore</string>
    <string name="play">Play!</string>
    <string name="title">MATHEMANIACS</string>
    <string name="titleBackgroundDescription">Background Image for Title</string>
    <string name="back">Back</string>
    <string name="gameModes">Game Modes</string>
    <string name="modesBackgroundDescription">Background Image for Modes Text</string>
    <string name="settingsBackgroundDescription">Background Image for Settings Text</string>
    <string name="settingsTextBackgroundDescription">Background Image for Setting modes</string>
    <string name="basicMulti">Basic Multiplication</string>
    <string name="advancedMulti">Advanced Multiplication</string>
    <string name="expertMulti">Expert Multiplication</string>
    <string name="squares">Squares</string>
    <string name="modulo">Modulo</string>
    <string name="factorial">Factorial</string>
    <string name="playButtonDescription">Background Image for Play Button</string>
    <string name="backButtonDescription">Background Image for Back Button</string>
    <string name="modeButtonDescription">Background Image for Mode Buttons</string>
    <string name="questionButtonDescription">Background Image for Question</string>
    <string name="answerButtonDescription">Background Image for Answers</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="textViewAnswer">%1$d</string>
    <string name="timeLeft">Time Left: </string>
    <string name="textViewTimeLeft">Time Left: %1$d</string>
    <string name="currentBest">Current Streak: </string>
    <string name="textViewCurrentBest">Current Streak: %1$d</string>
    <string name="previousBest">Previous Streak: </string>
    <string name="textViewPreviousBest">Previous Streak: %1$d</string>
    <string name="settings">Settings</string>
    <string name="basicSetting">Basic Multiplication Difficulty</string>
    <string name="advancedSetting">Advanced Multiplication Difficulty</string>
    <string name="expertSetting">Expert Multiplication Difficulty</string>
    <string name="squaresSetting">Squares Difficulty</string>
    <string name="moduloSetting">Modulo Difficulty</string>
    <string name="factorialSetting">Factorial Difficulty</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="basicDifficulty">BasicDifficulty</string>
    <string name="advancedDifficulty">AdvancedDifficulty</string>
    <string name="expertDifficulty">ExpertDifficulty</string>
    <string name="squaresDifficulty">SquaresDifficulty</string>
    <string name="moduloDifficulty">ModuloDifficulty</string>
    <string name="factorialDifficulty">FactorialDifficulty</string>
    <string name="correct1">Correct! Nice Job</string>
    <string name="correct2">Nice! Keep Going</string>
    <string name="correct3">Right On!</string>
    <string name="correct4">You\'re a Mathemaniac!</string>
    <string name="radioButtonBackground">Background Image for Radio Buttons</string>
    <string name="gameHeaderBackground">Background Image for Game Header</string>
    <string name="customDialogBackground">Background Image for Custom Dialog</string>
    <string name="dialogTitle">Dialog Title</string>
    <string name="dialogMessage">Dialog Message</string>
    <string name="nextQ">Next Question</string>
    <string name="backMenu">Back to Menu</string>
    <string name="incorrectTitle">Incorrect Answer!</string>
    <string name="outOfTimeTitle">Out of Time!</string>
    <string name="incorrectMultiply">Your Answer: %1$s\nCorrect Answer: %2$d x %3$d = %4$d</string>
    <string name="incorrectModulo">Your Answer: %1$s\nCorrect Answer: %2$d %% %3$d = %4$d</string>
    <string name="incorrectFactorial">Your Answer: %1$s\nCorrect Answer: %2$d ! = %3$d</string>
    <string name="outOfTimeMultiply">%1$d x %2$d = %3$d</string>
    <string name="outOfTimeModulo">%1$d %% %2$d = %3$d</string>
    <string name="outOfTimeFactorial">%1$d ! = %2$d</string>
    <string name="notEnoughTime">\nNot Enough Time? Go to settings to lower difficulty</string>
</resources>
