<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/mathemaniacsbackground"
    tools:context="com.willard.william.mathemaniacs.MainActivity">

    <Button
        android:text="@string/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="backButtonPressed"
        android:id="@+id/backMainButton" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:id="@+id/frameLayout"
        android:layout_below="@+id/backMainButton">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/textbackground"
            android:id="@+id/titleBackground"
            android:layout_gravity="center"
            android:contentDescription="@string/modesBackgroundDescription"/>

        <TextView
            android:text="@string/gameModes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center"
            android:id="@+id/gameModesText" />

    </FrameLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frameLayout"
        android:id="@+id/buttonLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp">

        <Button
            android:text="@string/basicMulti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/basicMultiplyButton"
            android:onClick="basicMultiplyButtonPressed"/>

        <Button
            android:text="@string/advancedMulti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/advancedMultiplyButton"
            android:onClick="advancedMultiplyButtonPressed"/>

        <Button
            android:text="@string/expertMulti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/expertMultiplyButton"
            android:onClick="expertMultiplyButtonPressed"/>

        <Button
            android:text="@string/squares"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/squaresButton"
            android:onClick="squaresButtonPressed"/>

        <Button
            android:text="@string/modulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/moduloButton"
            android:onClick="moduloButtonPressed"/>

        <Button
            android:text="@string/factorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/factorialButton"
            android:onClick="factorialButtonPressed"/>
    </LinearLayout>
</RelativeLayout>
