<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/mathemaniacsbackground"
    tools:context="com.willard.william.mathemaniacs.GameActivity">

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/timeLimitBar" />

    <TextView
        android:text="@string/timeLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeLeftText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:text="@string/previousBest"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/previousStreakText"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:text="@string/currentBest"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/streakText"
        android:layout_below="@+id/previousStreakText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeLimitBar"
        android:layout_marginTop="100dp"
        android:id="@+id/questionLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/textbackground"
            android:layout_gravity="center"
            android:contentDescription="@string/questionButtonDescription"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/question"
            android:id="@+id/questionText"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/questionLayout"
        android:layout_marginTop="75dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/answerbuttonbackground"
                    android:background="@null"
                    android:onClick="answer1ButtonPressed"
                    android:contentDescription="@string/answerButtonDescription"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer"
                    android:layout_gravity="center"
                    android:id="@+id/answer1Text"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/answerbuttonbackground"
                    android:background="@null"
                    android:onClick="answer2ButtonPressed"
                    android:contentDescription="@string/answerButtonDescription"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer"
                    android:layout_gravity="center"
                    android:id="@+id/answer2Text"/>

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="40dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/answerbuttonbackground"
                    android:background="@null"
                    android:onClick="answer3ButtonPressed"
                    android:contentDescription="@string/answerButtonDescription"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer"
                    android:layout_gravity="center"
                    android:id="@+id/answer3Text"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/answerbuttonbackground"
                    android:background="@null"
                    android:onClick="answer4ButtonPressed"
                    android:contentDescription="@string/answerButtonDescription"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer"
                    android:layout_gravity="center"
                    android:id="@+id/answer4Text"/>

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
